app/assets/stylesheets/application.scss
/* ... */
.navItem{
	display: block;
	width: 100%;
	height: 20px;
	clear: both;
}

.navItem:nth-child(1){
	.navMarker{
		background: #EDB0B1;
	}
	.navMarker > i{
		border-left: 10px solid #EDB0B1;
		border-top: 10px solid #EDB0B1;
	}
}

.navItem:nth-child(2){
	.navMarker{
		background: #F8DCB6;
	}
	.navMarker > i{
		border-left: 10px solid #F8DCB6;
		border-top: 10px solid #F8DCB6;
	}
}

.navItem:nth-child(3){
	.navMarker{
		background: #D9EDB0;
	}
	.navMarker > i{
		border-left: 10px solid #D9EDB0;
		border-top: 10px solid #D9EDB0;
	}
}

.navItem:nth-child(4){
	.navMarker{
		background: #B0EDB0;
	}
	.navMarker > i{
		border-left: 10px solid #B0EDB0;
		border-top: 10px solid #B0EDB0;
	}
}

.navItem:nth-child(5){
	.navMarker{
		background: #B0EDD7;
	}
	.navMarker > i{
		border-left: 10px solid #B0EDD7;
		border-top: 10px solid #B0EDD7;
	}
}

.navItem:nth-child(6){
	.navMarker{
		background: #B0DAED;
	}
	.navMarker > i{
		border-left: 10px solid #B0DAED;
		border-top: 10px solid #B0DAED;
	}
}

.navItem:nth-child(7){
	.navMarker{
		background: #B0B1ED;
	}
	.navMarker > i{
		border-left: 10px solid #B0B1ED;
		border-top: 10px solid #B0B1ED;
	}
}

.navItem:nth-child(8){
	.navMarker{
		background: #D4B0ED;
	}
	.navMarker > i{
		border-left: 10px solid #D4B0ED;
		border-top: 10px solid #D4B0ED;
	}
}

.navItem:nth-child(9){
	.navMarker{
		background: #EDB0E1;
	}
	.navMarker > i{
		border-left: 10px solid #EDB0E1;
		border-top: 10px solid #EDB0E1;
	}
}

.navItem:nth-last-child(2){
	.navMarker{
		background: #F1F1F1;
	}
	.navMarker > i{
		border-left: 10px solid #F1F1F1;
		border-top: 10px solid #F1F1F1;
	}
	margin-top: 40px;
}

/*
.navItem:nth-last-child(2){
	.navMarker{
		background: none;
	}
	.navMarker > i{
		border-left: none;
		border-top: none;
	}
}
*/

.popup{
	background-color: #fff !important;
}

.credit{
	text-decoration: underline;
	img{
		height: 18px;
	}
}

.tweetThis{
	margin: 20px 0 0 32px !important;
}

.navMarker {
  display: inline-block;
  height: 20px;
  width: 50px;
  float: left;
  position: relative;
}

.navMarker > i{
	position: absolute;
    width: 0;
    height: 0;
    line-height: 0;
    border: 10px solid transparent;
    left: 50px;
    top: 0px;
}

.navItem:hover, .activeNavItem{
	.navMarker{
		width: 80px;
	}
	.navMarker > i{
		left: 80px;
	}
	li{
		margin-left: -45px;
	}
}

li{
	margin: -5px 0 20px -15px;
	float: left;
	clear: right;
}

.navMarker, .navMarker > i, li {
	transition-timing-function: ease;
  	transition: 0.25s;
}

.newsletterBlock{
	margin: 40px 0 0 0 !important;
	padding: 10px 20px;
	background: #B0DAED;
	border-radius: 5px;
	li{
		margin: 0 0 10px 0;
		text-align: center;
		width: 100%;
		font-family: 'brandon-grotesque', sans-serif !important;
		list-style: none;
	}
	.ui.input input{
		border: none;
	}
	.ui.action.input{
		width: 100%;
	}
	.ui.button{
		background: #B0EDD7 !important;
	}
}

/* #Sticky navbar
================================================== */

.sideNav-scrolled {
  position: fixed;
  margin-top: 38px;
  top: 0;
}

/* #Data Table
================================================== */

.dataTable h2:first-child{
	margin-top: 0;
}

.dataTable {
	h2{
		clear: both;
	}
}

.breakerBar{
	height: 10px;
	width: 50px;
}

.featuredResources{
	.resource{
		margin-top: 0 !important;
	}
}

.dataTable{
	h2:nth-of-type(1) + .breakerBar{
		background-color: #EDB0B1;
	}

	h2:nth-of-type(2) + .breakerBar{
		background-color: #F8DCB6;
	}

	h2:nth-of-type(3) + .breakerBar{
		background-color: #D9EDB0;
	}

	h2:nth-of-type(4) + .breakerBar{
		background-color: #B0EDB0;
	}

	h2:nth-of-type(5) + .breakerBar{
		background-color: #B0EDD7;
	}

	h2:nth-of-type(6) + .breakerBar{
		background-color: #B0DAED;
	}

	h2:nth-of-type(7) + .breakerBar{
		background-color: #B0B1ED;
	}

	h2:nth-of-type(8) + .breakerBar{
		background-color: #D4B0ED;
	}

	h2:nth-of-type(9) + .breakerBar{
		background-color: #EDB0E1;
	}
}

.newLabel{
	display: inline-block;
	margin-left: 10px;
	background: #EDB0B1;
	padding: 2px 5px;
	color: white;
	p{
		font-weight: 800;
		color: #fff;
		text-transform: uppercase;
		letter-spacing: 1px;
		font-size: 12px;
	}
}

.publication, .job{
	margin-top: 30px;
	p{
		margin-top: 15px;
		margin-bottom: 10px;
	}
}

.tags, .tag_cloud{
	font-family: "Source Sans Pro", sans-serif;
	margin-top: 0px !important;
	padding-bottom: 7px;
	.tag{
		padding: 2px 7px;
		margin: 0 4px 0 0;
		border-radius: 5px;
		text-transform: lowercase;
		font-size: 14px !important;
	}
}

.tags{
	.tag{
		border: 2px solid #f1f1f1;
		&:hover{
			background-color: #f1f1f1;
		}
	}
}

.tag_cloud{
	.tag{
		display: inline-block;
		margin-top: 10px;
	}
	.tag:nth-of-type(1n){
		border: 2px solid #EDB0B1;
		&:hover{
			background-color: #EDB0B1;
		}
	}

	.tag:nth-of-type(2n){
		border: 2px solid #F8DCB6;
		&:hover{
			background-color: #F8DCB6;
		}
	}

	.tag:nth-of-type(3n){
		border: 2px solid #D9EDB0;
		&:hover{
			background-color: #D9EDB0;
		}
	}

	.tag:nth-of-type(4n){
		border: 2px solid #B0EDB0;
		&:hover{
			background-color: #B0EDB0;
		}
	}

	.tag:nth-of-type(5n){
		border: 2px solid #B0EDD7;
		&:hover{
			background-color: #B0EDD7;
		}
	}

	.tag:nth-of-type(6n){
		border: 2px solid #B0DAED;
		&:hover{
			background-color: #B0DAED;
		}
	}

	.tag:nth-of-type(7n){
		border: 2px solid #B0B1ED;
		&:hover{
			background-color: #B0B1ED;
		}
	}

	.tag:nth-of-type(8n){
		border: 2px solid #D4B0ED;
		&:hover{
			background-color: #D4B0ED;
		}
	}

	.tag:nth-of-type(9n){
		border: 2px solid #EDB0E1;
		&:hover{
			background-color: #EDB0E1;
		}
	}
}

.resource{
	position: relative;
	margin-top: 30px;
	h3, .resourceDescription{
		margin-left: 31px;
	}
	h3{
		display: inline-block;
	}
	.resourceFavicon{
		position: absolute;
		left: 0;
		top: 0;
		width: 24px;
		height: 24px;
		background: left bottom no-repeat;
	}
}
/* ... */

